[tool.poetry]
name = "draco"
version = "2.0.0"
description = "Visualization recommendation using constraints"
authors = [
    "Dominik Moritz <domoritz@cmu.edu>",
    "Chenglong Wang <clwang@cs.washington.edu>",
    "JunranY <junran@cs.washington.edu>",
    "Zehua Zeng <zhzeng@umd.edu>",
    "Péter Ferenc Gyarmati <peter.ferenc.gyarmati@univie.ac.at>",
]
license = "MIT"
homepage = "https://github.com/cmudig/draco2"
repository = "https://github.com/cmudig/draco2"
documentation = "https://dig.cmu.edu/draco2/"
keywords = ["constraints", "visualization", "design", "charts"]
exclude = ["draco/tests/*"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "Framework :: Jupyter",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
altair = "^5.0.0"
clingo = "^5.5.2"
fastapi = ">=0.85,<0.105"
pandas = ">=1.4.2,<3.0.0"
pydantic = ">=1.10.5,<3.0.0"
python = ">=3.10.0,<3.12"
scikit-learn = "^1.2.1"
uvicorn = ">=0.18.3,<0.24.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.990,<1.7"
pandas-stubs = ">=1.5.1,<3.0.0"
pre-commit = ">=2.20,<4.0"
pytype = ">=2023.10.17,<2024.0.0"
ruff = ">=0.1.2,<0.2.0"
types-tabulate = "^0.9.0.2"

[tool.poetry.group.docs.dependencies]
ipywidgets = ">=7.7.2,<9.0.0"
jupyter-book = ">=0.13.1,<0.16.0"
jupyterlab = ">=3.3,<5.0"
matplotlib = "^3.6.0"
sphinx-autodoc-typehints = "^1.19.1"
toml = "^0.10.2"
types-pkg-resources = "^0.1.2"
vega-datasets = "^0.9.0"
wheel = ">=0.38.4,<0.42.0"

[tool.poetry.group.test.dependencies]
deepdiff = "^6.2.1"
httpx = ">=0.23,<0.26"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
jupyterlite = ">=0.2.0,<0.3.0"
jupyterlite-pyodide-kernel = ">=0.2.0,<0.3.0"
libarchive-c = ">=4,<6"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["draco"]
# We don't want pyright to use library code to extract type information in the absence of type stub files
# since most of the times its inference is incomplete, leading to false positives.
useLibraryCodeForTypes = false

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    # isort
    "I001",
]
ignore = ["E501", "W191"]
src = ["draco"]
fix = true
