[tool.poetry]
name = "draco"
version = "2.0.1"
description = "Visualization recommendation using constraints"
authors = [
    "Dominik Moritz <domoritz@cmu.edu>",
    "Chenglong Wang <clwang@cs.washington.edu>",
    "JunranY <junran@cs.washington.edu>",
    "Zehua Zeng <zhzeng@umd.edu>",
    "Péter Ferenc Gyarmati <peter.ferenc.gyarmati@univie.ac.at>",
]
license = "MIT"
homepage = "https://github.com/cmudig/draco2"
repository = "https://github.com/cmudig/draco2"
documentation = "https://dig.cmu.edu/draco2/"
keywords = ["constraints", "visualization", "design", "charts"]
exclude = ["draco/tests/*"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "Framework :: Jupyter",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
altair = "^5.2.0"
clingo = "^5.5.2"
fastapi = ">=0.108,<0.200"
pandas = ">=2.1.4,<3.0.0"
pydantic = ">=2.5.3,<3.0.0"
python = ">=3.10.0,<3.12"
scikit-learn = "^1.3.2"
uvicorn = ">=0.25.0,<0.30.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.8.0,<1.9"
pandas-stubs = ">=2.1.4.231227,<3.0.0"
pre-commit = ">=3.6.0,<4.0"
pytype = ">=2023.12.18,<2024.0.0"
ruff = ">=0.1.11,<0.2.0"
types-tabulate = "^0.9.0.2"

[tool.poetry.group.docs.dependencies]
ipywidgets = ">=8.1.1,<9.0.0"
jupyter-book = ">=0.15.1,<1.1.0"
jupyterlab = ">=4.0.10,<5.0"
matplotlib = "^3.8.2"
sphinx-autodoc-typehints = "^1.19.1"
toml = "^0.10.2"
types-pkg-resources = "^0.1.3"
vega-datasets = "^0.9.0"
wheel = ">=0.42.0,<0.43.0"

[tool.poetry.group.test.dependencies]
deepdiff = "^6.7.1"
httpx = ">=0.26,<0.27"
pytest = ">=7.4.4,<9.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
jupyterlite = ">=0.2.0,<0.3.0"
libarchive-c = ">=4,<6"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    # isort
    "I001",
]
ignore = ["E501", "W191"]
src = ["draco"]
fix = true
