[project]
name = "draco"
version = "2.0.1"
description = "Visualization recommendation using constraints"
requires-python = ">=3.11"
authors = [
    { name = "Dominik Moritz", email = "domoritz@cmu.edu" },
    { name = "Chenglong Wang", email = "clwang@cs.washington.edu" },
    { name = "Junran Yang", email = "junran@cs.washington.edu" },
    { name = "Zehua Zeng", email = "zhzeng@umd.edu" },
    { name = "Péter Ferenc Gyarmati", email = "peter.ferenc.gyarmati@univie.ac.at" },
]
license = "MIT"
keywords = ["constraints", "visualization", "design", "charts"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "Framework :: Jupyter",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "altair>=5.4.1",
    "clingo>=5.7.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
]

[project.urls]
homepage = "https://github.com/cmudig/draco2"
repository = "https://github.com/cmudig/draco2"
documentation = "https://dig.cmu.edu/draco2/"

[project.optional-dependencies]
learn = ["scikit-learn>=1.5.2"]
server = ["fastapi>=0.115.4", "tabulate>=0.9.0", "uvicorn>=0.32.0"]

[dependency-groups]
dev = ["pre-commit>=4.0.1"]
docs = [
    "clyngor>=0.4.3",
    "ipywidgets>=8.1.5",
    "jupyter-book>=1.0.3",
    "jupyterlab>=4.3.0",
    "jupyterlite-pyodide-kernel>=0.4.3",
    "jupyterlite-sphinx>=0.16.5",
    "matplotlib>=3.9.2",
    "sphinx-autodoc-typehints>=2.3.0",
    "toml>=0.10.2",
    "vega-datasets>=0.9.0",
]
typecheck = [
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241009",
    "pytype>=2024.10.11",
    "types-setuptools>=75.3.0.20241107",
    "types-tabulate>=0.9.0.20240106",
]
lint = ["ruff>=0.7.3"]
test = [
    "deepdiff>=8.0.1",
    "httpx>=0.27.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.uv]
default-groups = ["dev", "docs", "typecheck", "lint", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.select = [
    "E",
    "F",
    "W",
    # isort
    "I001",
]
lint.ignore = ["E501", "W191"]
src = ["draco"]
fix = true
